k8s/overlays/prod/network/default-deny-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-egress
  namespace: automatic-system
spec:
  podSelector: {}
  policyTypes:
    - Egress
